--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--<meta name="viewport"-->
+          <!--content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
+    <!--<meta http-equiv="X-UA-Compatible" content="ie=edge">-->
     <title>Document</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
-<body>
-holis
+<body >
+
+
+<!--<button id="boton">Pulsa</button>-->
+
+<section id="discoanimado">
+    <div class="base" src="img/base.png"></div>
+    <div class="disco1"></div>
+    <div class="tapa"></div>
+</section>
+
+
 </body>
 </html>
